[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepirtools"
version = "0.1.4"
readme = "README.md"
description = "Deep learning-based estimation and inference for item response theory models."
keywords = ["deep learning", "item response theory", "factor analysis"]
dependencies = [
    'torch',
    'pyro-ppl',
    'numpy'
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/cjurban/deepirtools"

[tool.setuptools]
include-package-data = true